파일 경로 체계 변경. 기본 경로는 FileManager, 서브 경로는 FilePrefix, 파일명은 DB에서 관리함